Added search menu, profile image and some extra details

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <script src="https://kit.fontawesome.com/a9531b9203.js" crossorigin="anonymous"></script>
     <title>Nerdflix</title>
 </head>
 <body>
@@ -16,7 +17,13 @@
                 <a href="">Início</a>
                 <a href="">Séries</a>
                 <a href="">Filmes</a>
-                <a href="">Documentários</a>
+                <a href="">Minha lista</a>
+            </nav>
+            <nav>
+                <a href=""><i class="fas fa-search"></i></a>
+                <a href="">INFANTIL</a>
+                <a href=""><i class="fas fa-gift"></i></a>
+                <a href=""><img style="height: 3vh; width:auto; margin-right: 10px;" src="/img/scorpion-profile.jpg" alt=""><i class="fas fa-sort-down"></i></a>
             </nav>
         </div>
     </header>
@@ -25,10 +32,10 @@
         <div class="main-movie">
             <div class="container">
                 <h3 class="title">House of Cards</h3>
-                <p class="description">Nada pode impedir o político sem escrúpulos Frank Underwood conquiste Washington</p>
+                <p class="description">Nada pode impedir que o político sem escrúpulos Frank Underwood conquiste Washington</p>
                 <div class="buttons">
-                    <button role="button" class="btn">Assistir</button>
-                    <button role="button" class="btn">Mais informações</button>
+                    <button role="button" class="btn btn-play"><i class="fas fa-play"></i>Assistir</button>
+                    <button role="button" class="btn btn-info"><i class="fas fa-info-circle"></i>Mais informações</button>
                 </div>
                 
             </div>
