--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
     <script src="https://kit.fontawesome.com/a9531b9203.js" crossorigin="anonymous"></script>
-    <title>Nerdflix</title>
+    <title>Notflix</title>
 </head>
 <body>
     <header>
@@ -13,18 +13,23 @@
             <div class="logo">
                 <h2>NOTFLIX</h2>
             </div>
-            <nav>
-                <a href="">Início</a>
-                <a href="">Séries</a>
-                <a href="">Filmes</a>
-                <a href="">Minha lista</a>
-            </nav>
-            <nav>
-                <a href=""><i class="fas fa-search"></i></a>
-                <a href="">INFANTIL</a>
-                <a href=""><i class="fas fa-gift"></i></a>
-                <a href=""><img style="height: 3vh; width:auto; margin-right: 10px;" src="/img/scorpion-profile.jpg" alt=""><i class="fas fa-sort-down"></i></a>
-            </nav>
+            <div>
+                <nav>
+                    <a href="">Início</a>
+                    <a href="">Séries</a>
+                    <a href="">Filmes</a>
+                    <a href="">Minha lista</a>
+                </nav>
+            </div>
+            <div>
+                <nav>
+                    <a href=""><i class="fas fa-search"></i></a>
+                    <a href="">INFANTIL</a>
+                    <a href=""><i class="fas fa-gift"></i></a>
+                    <a href=""><img style="height: 3vh; width:auto; margin-right: 10px;" src="/img/scorpion-profile.jpg" alt=""><i class="fas fa-sort-down"></i></a>
+                </nav>
+            </div>
+
         </div>
     </header>
 
