Made movies/series carousel and aresponsive details

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
     <script src="https://kit.fontawesome.com/a9531b9203.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style/responsive.css">
+
+    <!--OWL Carousel CSS-->
+    <link rel="stylesheet" href="/style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="/style/owl/owl.theme.default.min.css">
+    
     <title>Notflix</title>
 </head>
 <body>
@@ -42,9 +48,33 @@
                     <button role="button" class="btn btn-play"><i class="fas fa-play"></i>Assistir</button>
                     <button role="button" class="btn btn-info"><i class="fas fa-info-circle"></i>Mais informações</button>
                 </div>
-                
+            </div>
+        </div>
+        <div class="carousel-movies">
+            <h3 style="margin-left: 20px; margin-bottom: 10px;">Em alta</h3>
+            <div class="owl-carousel owl-theme">
+                <div class="item"><img class="box-movie" src="img/cartaz-arthur-&-merlin-knights-of-camelot.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-bad-boys-para-sempre.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-convenção-das-bruxas.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-coringa.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-em-busca-do-paraíso.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-enola-holmes.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-mulan.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-o-gambito-da-rainha.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-power.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-santana.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-star-trek-discovery.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-sw-mandalorian.jpg" alt=""></div>
+                <div class="item"><img class="box-movie" src="img/cartaz-the-boys.jpg" alt=""></div>
             </div>
         </div>
     </main>
+
+
+    <!-- OWL Carousel JS-->
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <!--jQuery-->
+    <script src="js/owl/script.js"></script>
 </body>
 </html>
